# xiangqi-server

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  socket_test.html
.circleci/: config.yml
lib/: fen.py  pyffish.py  rule.py  test_moves.py  widget.py  xiangcheck.py
tests/: conftest.py  factories.py
tests/factories/: game.py  game_event.py  game_request.py  move.py  participant.py  player.py  user.py
tests/web/: test_settings.py
tests/xiangqi/: test_views.py
web/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
web/settings/: base.py  local.py  production.py  test.py
xiangqi/: apps.py  consumers.py  models.py  routing.py  settings.py  urls.py  views.py  wsgi.py
xiangqi/fixtures/: api__game__1.json  api__initial_position.json  api__v2__initial_position.json  api__v3__initial_position.json  max_vs_jason.json  pieces.json
xiangqi/lib/: jwt.py  pyffish.py
xiangqi/migrations/: 0001_initial.py  0002_auto_20191128_1850.py  0002_auto_20200405_1827.py  0002_move_event_set.py  0002_participant_role.py  0002_piece_code.py  0003_auto_20200507_0132.py  0003_piece_color.py  0003_remove_move_piece.py  0003_takebackevent.py  0004_auto_20190622_0203.py  0004_auto_20191129_1804.py  0004_auto_20200617_0425.py  0004_remove_game_state.py  0005_auto_20190622_0424.py  0005_auto_20191129_1824.py  0005_auto_20200617_0426.py  0005_delete_gametransition.py  0006_accesstoken_refreshtoken.py  0006_auto_20190622_1907.py  0006_auto_20200517_1536.py  0006_auto_20200617_0428.py  0007_delete_token.py  (+55 more)
(+107 files in other folders)
