[tool.poetry]
name = "xchi"
version = "0.1.0"
description = "Xiangqi server"
authors = ["Maxim Pertsov <maxim.pertsov@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^20.3.0"
Django = "^3.1.4"
PyJWT = "^1.7.1"
channels = "^3.0.2"
channels-redis = "^3.2.0"
dj-database-url = "^0.5.0"
django-cors-headers = "^3.5.0"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
gunicorn = "^20.0.4"
jsonschema = "^3.2.0"
psycopg2-binary = "^2.8.6"
pytz = "^2020.4"
sqlparse = "^0.4.1"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
Click = "^7.1.2"
Pygments = "^2.7.4"
appdirs = "^1.4.4"
appnope = "^0.1.2"
backcall = "^0.2.0"
coverage = "^5.3"
decorator = "^4.4.2"
entrypoints = "^0.3"
flake8 = "^3.8.4"
future = "^0.18.2"
graphviz = "^0.15"
ipython-genutils = "^0.2.0"
ipython = "^7.19.0"
mccabe = "^0.6.1"
parso = "^0.8.0"
pdbpp = "^0.10.2"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
pluggy = "^0.13.1"
prompt-toolkit = "^3.0.8"
ptyprocess = "^0.6.0"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
pytest-cov = "^2.10.1"
pytest-django = "^4.1.0"
pytest-factoryboy = "^2.0.3"
pytest-mock = "^3.3.1"
pytest-watch = "^4.2.0"
pytest-xdist = "^2.1.0"
pytest = "^6.1.2"
six = "^1.15.0"
toml = "^0.10.2"
traitlets = "^5.0.5"
wcwidth = "^0.2.5"
factory_boy = "^2.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
